# CC3301-23O

./: .gitignore  CMakeLists.txt  README.md
Auxiliares/: CMakeLists.txt
Auxiliares/Auxiliar 10/: Auxiliar 10 - Directorios de Unix.md  CMakeLists.txt
Auxiliares/Auxiliar 10/aux/: buscar.c  cualquierusr.c
Auxiliares/Auxiliar 10/data/not_tareas/: t3.c
Auxiliares/Auxiliar 10/enun/: Auxiliar10.dvi  Auxiliar10.tex  Makefile
Auxiliares/Auxiliar 10/old/pauta/: buscar.c  cualquierusr.c
Auxiliares/Auxiliar 10/pauta/: buscar.c  cualquierusr.c
Auxiliares/Auxiliar 12/: CMakeLists.txt
Auxiliares/Auxiliar 12/aux/: main.c  p1.c  p2.c  p3.c  p3.s  p4.c
Auxiliares/Auxiliar 12/pauta/: main.c  p1.c  p2.c  p3.c  p4.c
Auxiliares/Auxiliar 2/: Auxiliar 2 - Bits.md  P1  P2  P3  a.c  test
Auxiliares/Auxiliar 2/PautaP/: P1  P2  P3  p1.c  p2.c  p3.c
Auxiliares/Auxiliar 3/: CMakeLists.txt
Auxiliares/Auxiliar 3/auxiliar/: CMakeLists.txt  aux.c  aux.h  p1.c  p2.c  p3.c  p4.c
Auxiliares/Auxiliar 3/pauta/: P1.c  P2.c  P3.c  P4.c  p3  p4
Auxiliares/Auxiliar 6/: CMakeLists.txt
Auxiliares/Auxiliar 6/auxiliar/: auxiliar_7.c  modificar.c  modificar.h
Auxiliares/Auxiliar 6/enunciado/: Auxiliar7.dvi  Auxiliar7.fdb_latexmk  Auxiliar7.fls  Auxiliar7.tex  Makefile
Auxiliares/Auxiliar 6/enunciado/_minted-Auxiliar5/: 4EB4B56B8A05E6BBFC098F97A1530B2A575D0D2BB9878364F1E0FFCD6D744202.pygtex  (+1 more)
Auxiliares/Auxiliar 6/pauta/: dict.txt  modificar.c  modificar.h
Auxiliares/Auxiliar 9/enun/: Auxiliar1.fdb_latexmk  Auxiliar3.dvi  Auxiliar3.tex  Makefile
Tareas/T1/: Makefile  a.out  (+3 more)
(+25 files in other folders)
